--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
   <body>
   <head>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@800&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
-    <title>Meadow Creek to Gore Range</title>
-    <h1>Meadow Creek Trail to Gore Range Trail <br> 22 July 2022</h1>
+    <title>Meadow Creek </title>
+    <h1>MEADOW CREEK TO GORE RANGE<br> 22 July 2022</h1>
     <img src="images/mc2gthero.JPG">
   </head>
   </body>
