--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html lang="en">
-  <body>
   <head>
+    <meta charset="UTF-8">
+    <title>Meadow Creek </title>
+  </head>
+  <body>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@800&display=swap" rel="stylesheet">
-    <meta charset="UTF-8">
-    <title>Meadow Creek </title>
     <h1>MEADOW CREEK TO GORE RANGE<br> 22 July 2022</h1>
-    <img src="images/mc2gthero.JPG">
-  </head>
+    <img src="images/mc2gthero.JPG"> <alt="panoramic photo of hiking trail, alpine meadow, and mountain peaks">
   </body>
 </html>
